--- a/index.html
+++ b/index.html
@@ -6,109 +6,114 @@
 <title>🎯 Probability Master – Stage 5 Challenge</title>
 <style>
 body {
-  margin:0;
-  font-family:"Segoe UI",sans-serif;
-  background:linear-gradient(135deg,#240b36,#c31432);
-  color:#fff;
-  min-height:100vh;
-  display:flex;
-  overflow:hidden;
+  margin: 0;
+  font-family: "Segoe UI", sans-serif;
+  background: linear-gradient(135deg, #240b36, #c31432);
+  color: #fff;
+  min-height: 100vh;
+  display: flex;
+  overflow: hidden;
 }
 .sidebar {
-  width:220px;
-  background:rgba(0,0,0,0.3);
-  padding:16px;
-  border-right:1px solid rgba(255,255,255,0.2);
+  width: 220px;
+  background: rgba(0, 0, 0, 0.3);
+  padding: 16px;
+  border-right: 1px solid rgba(255, 255, 255, 0.2);
 }
 .tab {
-  width:100%;
-  margin:8px 0;
-  padding:10px;
-  border:none;
-  border-radius:8px;
-  background:rgba(255,255,255,0.15);
-  color:#fff;
-  cursor:pointer;
-  transition:0.2s;
+  width: 100%;
+  margin: 8px 0;
+  padding: 10px;
+  border: none;
+  border-radius: 8px;
+  background: rgba(255, 255, 255, 0.15);
+  color: #fff;
+  cursor: pointer;
+  transition: 0.2s;
 }
-.tab:hover {background:rgba(255,255,255,0.3);}
+.tab:hover { background: rgba(255, 255, 255, 0.3); }
 .main {
-  flex:1;
-  display:flex;
-  flex-direction:column;
-  padding:16px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
 }
 .topbar {
-  display:flex;
-  justify-content:space-between;
-  background:rgba(255,255,255,0.1);
-  padding:10px;
-  border-radius:10px;
-  margin-bottom:10px;
+  display: flex;
+  justify-content: space-between;
+  background: rgba(255, 255, 255, 0.1);
+  padding: 10px;
+  border-radius: 10px;
+  margin-bottom: 10px;
 }
 .badge {
-  background:rgba(255,255,255,0.15);
-  padding:6px 10px;
-  border-radius:10px;
+  background: rgba(255, 255, 255, 0.15);
+  padding: 6px 10px;
+  border-radius: 10px;
 }
 .question {
-  text-align:center;
-  font-weight:bold;
-  font-size:1.3em;
-  margin:10px auto;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.3em;
+  margin: 10px auto;
 }
 #gameArea {
-  flex:1;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
-  background:rgba(255,255,255,0.1);
-  border-radius:14px;
-  border:2px solid rgba(255,255,255,0.3);
-  padding:20px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 14px;
+  border: 2px solid rgba(255, 255, 255, 0.3);
+  padding: 20px;
 }
 .choice {
-  background:linear-gradient(45deg,#ff416c,#ff4b2b);
-  color:#fff;
-  font-weight:bold;
-  margin:8px;
-  padding:10px 20px;
-  border-radius:10px;
-  cursor:pointer;
-  transition:0.3s;
-  width:80%;
-  max-width:420px;
-  text-align:center;
+  background: linear-gradient(45deg, #ff416c, #ff4b2b);
+  color: #fff;
+  font-weight: bold;
+  margin: 8px;
+  padding: 10px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.3s;
+  width: 80%;
+  max-width: 420px;
+  text-align: center;
 }
-.choice:hover {transform:scale(1.05); background:linear-gradient(45deg,#ff4b2b,#ff416c);}
-.correct {background:#4caf50 !important;}
-.incorrect {background:#e53935 !important;}
+.choice:hover {
+  transform: scale(1.05);
+  background: linear-gradient(45deg, #ff4b2b, #ff416c);
+}
+.correct { background: #4caf50 !important; }
+.incorrect { background: #e53935 !important; }
 #message {
-  text-align:center;
-  margin-top:10px;
-  font-weight:bold;
-  font-size:1.1em;
-  transition:0.3s;
+  text-align: center;
+  margin-top: 10px;
+  font-weight: bold;
+  font-size: 1.1em;
+  transition: 0.3s;
 }
 
-/* Fireworks */
+/* Fireworks Canvas */
 canvas#fireworks {
-  position:fixed;
-  left:0; top:0;
-  width:100%; height:100%;
-  pointer-events:none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
 }
 </style>
 </head>
 <body>
 
 <aside class="sidebar">
-<h2>🎯 Probability</h2>
-<button class="tab" id="restartTab">Restart</button>
-<button class="tab" id="hintTab">Hint</button>
-<button class="tab" id="stopTab">Stop</button>
-<button class="tab" id="helpTab">Help</button>
+  <h2>🎯 Probability</h2>
+  <button class="tab" id="restartTab">Restart</button>
+  <button class="tab" id="hintTab">Hint</button>
+  <button class="tab" id="stopTab">Stop</button>
+  <button class="tab" id="helpTab">Help</button>
 </aside>
 
 <main class="main">
@@ -128,11 +133,17 @@ canvas#fireworks {
 (() => {
 const $ = id => document.getElementById(id);
 let score = 0, round = 0, active = false;
-let current = null; // ✅ make current question global
+let current = null;
 const maxRounds = 15;
+const cheers = [
+  "🎆 Fantastic!",
+  "🎉 Amazing work!",
+  "🔥 You’re unstoppable!",
+  "🌟 Great reasoning!",
+  "👏 Excellent probability logic!"
+];
 
-const cheers = ["🎆 Fantastic!", "🎉 Amazing work!", "🔥 You’re unstoppable!", "🌟 Great reasoning!", "👏 Excellent probability logic!"];
-
+// === QUESTIONS ===
 const questions = [
   {q:"Two coins are tossed. What is the probability of getting exactly one head?", choices:["1/2","1/4","2/3","3/4"], a:"1/2", hint:"There are 4 outcomes: HH, HT, TH, TT."},
   {q:"A die is rolled twice. What is the total number of possible outcomes?", choices:["36","12","18","24"], a:"36", hint:"6 × 6 outcomes."},
@@ -151,36 +162,36 @@ const questions = [
   {q:"A probability of 0.25 means the event is...", choices:["Unlikely","Likely","Certain","Impossible"], a:"Unlikely", hint:"Less than 0.5 means less likely to occur."}
 ];
 
-// 🎇 Fireworks
+// === FIREWORKS ===
 const canvas = $("fireworks");
 const ctx = canvas.getContext("2d");
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
+canvas.width = innerWidth;
+canvas.height = innerHeight;
 let particles = [];
 
 function createFirework(x, y){
   for(let i=0;i<80;i++){
     particles.push({
       x, y,
-      radius:Math.random()*3+1,
-      color:`hsl(${Math.random()*360},100%,60%)`,
-      speedX:(Math.random()-0.5)*8,
-      speedY:(Math.random()-1)*8,
-      alpha:1
+      radius: Math.random()*3+1,
+      color: `hsl(${Math.random()*360},100%,60%)`,
+      speedX: (Math.random()-0.5)*6,
+      speedY: (Math.random()-1)*6,
+      alpha: 1
     });
   }
 }
 function animateFireworks(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
   particles.forEach((p,i)=>{
-    ctx.globalAlpha=p.alpha;
-    ctx.fillStyle=p.color;
+    ctx.globalAlpha = p.alpha;
+    ctx.fillStyle = p.color;
     ctx.beginPath();
     ctx.arc(p.x,p.y,p.radius,0,Math.PI*2);
     ctx.fill();
-    p.x+=p.speedX;
-    p.y+=p.speedY;
-    p.alpha-=0.02;
+    p.x += p.speedX;
+    p.y += p.speedY;
+    p.alpha -= 0.02;
     if(p.alpha<=0) particles.splice(i,1);
   });
   requestAnimationFrame(animateFireworks);
@@ -188,11 +199,13 @@ function animateFireworks(){
 animateFireworks();
 
 function playCheer(){
-  const cheer=$("cheer");
-  cheer.currentTime=0;
-  cheer.play();
+  const cheer = $("cheer");
+  cheer.pause();
+  cheer.currentTime = 0;
+  cheer.play().catch(()=>{}); // avoid autoplay block
 }
 
+// === GAME FLOW ===
 function startRound(){
   if(round >= maxRounds){ endGame(); return; }
   active = true;
@@ -200,14 +213,14 @@ function startRound(){
   $("gameArea").innerHTML = "";
   round++;
   $("round").textContent = round;
-  current = questions[Math.floor(Math.random()*questions.length)]; // ✅ assign globally
+  current = questions[Math.floor(Math.random()*questions.length)];
   $("question").textContent = current.q;
-  const shuffled = [...current.choices].sort(() => Math.random() - 0.5);
-  shuffled.forEach(choice => {
+  const shuffled = [...current.choices].sort(()=>Math.random()-0.5);
+  shuffled.forEach(choice=>{
     const btn = document.createElement("div");
     btn.className = "choice";
     btn.textContent = choice;
-    btn.onclick = e => {
+    btn.onclick = e=>{
       if(!active) return;
       if(choice === current.a){
         btn.classList.add("correct");
@@ -236,30 +249,33 @@ function endGame(){
   active = false;
 }
 
-$("restartTab").onclick = () => {
-  score = 0; round = 0;
-  $("score").textContent = 0;
-  $("round").textContent = 0;
-  $("question").textContent = "Starting...";
-  setTimeout(startRound, 800);
+$("restartTab").onclick = ()=>{
+  score=0; round=0;
+  $("score").textContent=0;
+  $("round").textContent=0;
+  $("question").textContent="Starting...";
+  $("message").textContent="";
+  setTimeout(startRound,800);
 };
 
-// ✅ Fixed Hint function
-$("hintTab").onclick = () => { 
-  if(current && current.hint) alert("💡 Hint: " + current.hint); 
-  else alert("No hint available yet! Start a round first.");
+$("hintTab").onclick = ()=>{
+  if(current && current.hint)
+    alert("💡 Hint: " + current.hint);
+  else
+    alert("Start a round first to see a hint!");
 };
 
-$("stopTab").onclick = () => { 
-  $("gameArea").innerHTML = ""; 
-  $("message").textContent = "⏹ Game paused."; 
-  active = false; 
+$("stopTab").onclick = ()=>{
+  $("gameArea").innerHTML="";
+  $("message").textContent="⏹ Game paused.";
+  active=false;
 };
-$("helpTab").onclick = () => {
-  alert("🎯 How to Play:\n• Click Restart to begin.\n• Choose the correct probability answer.\n• Use hints if needed.\n• 15 rounds total.\n• Covers Stage 5 concepts: compound events, Venn diagrams, conditional probability, and independent/dependent events.");
+$("helpTab").onclick = ()=>{
+  alert("🎯 How to Play:\n• Click Restart to begin.\n• Choose the correct answer.\n• Use Hint for guidance.\n• Fireworks and cheers reward correct answers!\n• 15 rounds total, aligned with NSW Stage 5 Probability concepts.");
 };
 })();
 </script>
 </body>
 </html>
+
 
